# kt-platform-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
ai/: __init__.py  chunkers.py  chunking.py  embedder.py  llm.py  providers.py  rag.py  types.py
alembic/: env.py
alembic/versions/: 1afe2f0005f8_initial_schema.py  6a03f1a09e9c_employees_kb_employee_id.py  b1c2d3e4f5a6_employee_connectors.py
app/: __init__.py  deps.py  main.py  observability.py  schemas.py
app/routers/: connectors.py  dashboard.py  employees.py  health.py  insights.py  interviews.py  jobs.py  knowledge.py  workspace.py
config/: __init__.py  settings.py
connectors/: __init__.py  atlassian.py  base.py  extract.py  github.py  google.py  microsoft.py
core/: __init__.py  connectors.py  crypto.py  dashboard.py  employees.py  export.py  ingest.py  insights.py  interview.py  onboarding.py  synthesis.py
data/: __init__.py  db.py  models.py  repositories.py  seed.py
evals/: __init__.py  ab_chunking.py  corpus.py  corpus_hard.py  golden.py  golden_hard.py  harness.py  run.py
jobs/: __init__.py  celery_app.py  tasks.py
scripts/: create_database.py  reset_data.py  seed_activity.py  seed_demo.py  seed_employees.py
tests/: test_health.py  test_onboarding.py  test_vector_store.py
vector/: __init__.py  client.py
